--- a/css/styling.css
+++ b/css/styling.css
@@ -168,7 +168,6 @@ i{
     width: 40px;
     height: 40px;
     font-size: 1.5rem;
-    /* padding: 20px; */
     cursor: pointer;
     margin: 0 5px;
     color: #777777; 
@@ -202,4 +201,11 @@ i{
         font-weight: 600;
         padding: 2rem !important;
     }
+    .navbar .container{
+        display: inline-block;
+        margin-left: 0rem;
+        margin-top: -25rem;
+    }
 }
+
+
